# commit-hooks-sbt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: sbt_compile.py  sbt_task.py  sbt_test.py
