[metadata]
name = pre_commit_sbt
version = 1.0.0
description = sbt hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blaz-kranjc/pre-commit-sbt
author = Blaz Kranjc
author_email = blaz@kranjc.xyz
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
python_requires = >=3.7

[options.entry_points]
console_scripts =
    sbt-compile = pre_commit_hooks.sbt_compile:main
    sbt-test = pre_commit_hooks.sbt_test:main
    sbt-task = pre_commit_hooks.sbt_task:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
